api/swim_form/src/tests/derive/form/newtype_enum.stderr
error: Cannot use `newtype` annotation with enums
  --> src/tests/derive/form/newtype_enum.rs:6:5
   |
6  | /     #[form(newtype)]
7  | |     enum A {
8  | |         B,
9  | |         C,
10 | |     }
   | |_____^
